test/algeff/wrong/ops5.kk.out
test/algeff/wrong/ops5.kk(10,13): error: operator get is handled multiple times